syntax = "proto3";

package media;

option go_package = "github.com/portfolio/proto/media";

import "google/protobuf/timestamp.proto";

// Media Service
service MediaService {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc GetFile(GetFileRequest) returns (MediaFileResponse);
  rpc DeleteFile(DeleteFileRequest) returns (Empty);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
  rpc GetFilesByUser(GetFilesByUserRequest) returns (ListFilesResponse);
}

message Empty {}

// MediaFile messages
message MediaFile {
  int64 id = 1;
  string file_name = 2;
  string file_url = 3;
  int64 uploaded_by = 4;
  google.protobuf.Timestamp uploaded_at = 5;
  string file_type = 6; // image, document, resume
  int64 file_size = 7;
}

message UploadFileRequest {
  oneof data {
    FileMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message FileMetadata {
  string file_name = 1;
  string file_type = 2;
  int64 uploaded_by = 3;
}

message UploadFileResponse {
  MediaFile file = 1;
}

message GetFileRequest {
  int64 id = 1;
}

message MediaFileResponse {
  MediaFile file = 1;
}

message DeleteFileRequest {
  int64 id = 1;
}

message ListFilesRequest {
  int32 page = 1;
  int32 limit = 2;
  string file_type = 3; // optional filter
}

message ListFilesResponse {
  repeated MediaFile files = 1;
  int32 total = 2;
}

message GetFilesByUserRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}
